subnets.tf
resource "aws_subnet" "pub1" {
  vpc_id     = aws_vpc.myvpc.id
  cidr_block = "10.0.1.0/24"
availability_zone = "us-east-1a"
  tags = {
    Name = "pub1"
  }
}

resource "aws_subnet" "pub2" {
  vpc_id     = aws_vpc.myvpc.id
  cidr_block = "10.0.2.0/24"
availability_zone = "us-east-1b"
  tags = {
    Name = "pub2"
  }
}

resource "aws_subnet" "pri3" {
  vpc_id     = aws_vpc.myvpc.id
  cidr_block = "10.0.3.0/24"
availability_zone = "us-east-1a"
  tags = {
    Name = "ppri3"
  }
}

resource "aws_subnet" "pri4" {
  vpc_id     = aws_vpc.myvpc.id
  cidr_block = "10.0.4.0/24"
availability_zone = "us-east-1b"
  tags = {
    Name = "pri4"
  }
}
